deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: basic-api
  labels:
    app: helloworld
spec:
  revisionHistoryLimit: 3
  replicas: 1
  selector:
    matchLabels:
      app: helloworld
  template:
    metadata:
      labels:
        app: helloworld
    spec:
      containers:
        - name: helloworld
          image: <IMAGE>
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "64Mi"
              cpu: "200m"
            limits:
              memory: "256Mi"
              cpu: "600m"
