service.yaml
apiVersion: v1
kind: Service
metadata:
  name: basic-api-service
  labels:
    app: helloworld
spec:
  type: LoadBalancer
  selector:
    app: helloworld
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 5000
      nodePort: 30026
